# gengine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md
Engine/: editor.cpp  input.cpp  main.cpp  object.cpp  sceneManager.cpp
Engine/Util/: shaderc.cpp  shapegen.cpp
Engine/gizmos/: transformTool.cpp
Engine/lighting/: shadow.cpp
Engine/objects/: billboard.cpp  object.cpp  shapegen.cpp
Engine/util/: shaderc.cpp  shapegen.cpp
OTHER_LICENSES/: SDL2.md
Player/: globals.cpp  main.cpp  stb_image_impl.cpp
include/: input.hpp  shaderc.h
include/Engine/: editor.hpp  game.h  game.hpp  input.hpp  light.h  light.hpp  object.h  object.hpp  sceneManager.h  sceneManager.hpp
include/Engine/gizmos/: transformTool.hpp
include/Engine/lighting/: shadow.hpp
include/Engine/objects/: billboard.hpp  light.hpp  object.hpp  shapegen.hpp
include/Util/: shapegen.h
include/glad/: glad.c  glad.h
include/util/: shapegen.hpp
shaders/: basic.frag  basic.vert  fragment.glsl  vertex.glsl
shaders/shadows/: shadow_depth_frag.glsl  shadow_depth_vert.glsl
shaders/unlit/: fragment.glsl  vertex.glsl
source/: GameMain.cpp  GameMain.h  GameMain.hpp  Player.cpp  Player.hpp
